k8s/deployment-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: node-backend
spec:
    replicas: 1
    selector:
      matchLabels:
        app: node
    template:
      metadata:
        labels:
          app: node
      spec:
        containers:
          - name: node
            image: sighup/kubeprimer-backend
            ports:
              - containerPort: 80
          - name: sidecar
            image: sighup/exporter
            ports:
              - containerPort: 3000

---
kind: Service
apiVersion: v1
metadata:
  name: node-service
spec:
  selector:
    app: node
  ports:
    - port: 80
      name: backend
    - port: 3000
      name: sidecar
