k8s/deployment-mongo.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-statefulset
spec:
  selector:
    matchLabels:
      app: mongodb
  serviceName: mongo-servicename
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb-container
          image: mongo:4.1.5-xenial
          ports:
            - containerPort: 27017
              name: mongo-port
          volumeMounts:
            - mountPath: /data/db
              name: mongo-persistent-volume
      volumes:
        - name: mongo-persistent-volume
          persistentVolumeClaim:
            claimName: mongo-persistent-volume-claim
---
kind: Service
apiVersion: v1
metadata:
  name: mongo-service
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
